wp-content/themes/plusplus2019/style.css
/* ... */
/*.plus li {
	margin:0 0 2em 1.4em;
	line-height: 1.4em;
	color: #fff;
}*/
.plus li {
  position: relative;
  list-style-type: none;
  margin: 0 0 2em 1.4em;
  line-height: 1.4em;
  font-size: 22px;
}

.plus li:before {
  content: "";
  position: absolute;
  top: 2px;
  left: -42px;
  width: 24px;
  height: 24px;
  background-image: url("images/li_img.png");
  background-repeat: no-repeat;
}

/* About Page Timeline Graphic */
ul.timeline {
  position: relative;
}

ul.timeline .horiz-timeline {
  position: absolute;
  border-left: 1px solid #fff;
  height: 800px;
  top: 0;
  left: 370px;
}

ul.timeline li {
  position: relative;
  list-style-type: none;
  line-height: 1.4em;
  font-size: 1em;
  padding: 2.6em 0 0 4.4em;
  height: 240px;
  background-image: url("images/timeline-arrow-lft.png");
  background-repeat: no-repeat;
  min-width: 325px;
}

ul.timeline li h4 {
  margin-left: -0.6em;
}

ul.timeline li img {
  width: 12px;
  margin-left: -20px;
}

ul.timeline li:nth-child(odd) {
  margin-left: 380px;
}

ul.timeline li:nth-child(even) {
  background-image: url("images/timeline-arrow-rt.png");
  padding: 2.6em 0 0 3.4em;
}

ul.timeline li div {
  max-width: 240px;
}

ul.timeline li:nth-child(even) div {
  margin-left: 70px;
}

/* BUTTONS */
button, .button {
  font-size: 1em;
  padding: 10px 20px;
  border-radius: 8px;
  background-color: #BD84CC;
  border: none;
  font-weight: 600;
  color: #fff;
  -webkit-transition-duration: 0.4s;
  /* Safari */
  transition-duration: 0.4s;
  margin: 1em 1em auto auto;
  display: inline-block;
  text-transform: capitalize;
}

#menu-top-nav li.button a, #menu-primary li.button a {
  color: #fff;
}

button:hover, .button:hover, .button a:hover {
  background-color: #1BBA8A;
  /* teal */
  color: #fff;
}

a.more-link {
  background: #000;
  color: #fff;
  padding: 8px;
  font-weight: 400;
}

a.more-link:hover {
  color: #BD84CC;
}

.more-link img {
  margin-bottom: -2px;
  width: 14px;
}

/* //BUTTONS */
img.round {
  border-radius: 50%;
  width: 250px;
  z-index: -1;
  text-align: center;
}

.round-bdr {
  display: inline-block;
  width: 265px;
  height: 265px;
  border: 2px solid #1BBA8A;
  border-radius: 50%;
  z-index: 99;
  margin-bottom: 2em;
  margin-left: 150px;
}

body.home section.partners {
  grid-template-columns: repeat(5, 1fr);
  grid-gap: 1em;
  max-width: 80%;
  margin: auto;
  justify-items: center;
}
body.home section.partners img {
  max-height: 100px;
}
body.home section.partners img.chan-zuck {
  max-height: 80px;
}

body.page-child footer ul.menu {
  margin: 0;
  list-style-type: none;
}

footer {
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  font-family: "Poppins", sans-serif;
  font-weight: 600;
}
footer a {
  color: #000;
}
footer a:hover {
  color: #05605D;
}
footer li {
  margin: 0 0 0.4em 0;
}

.no-grid {
  display: block;
}

.micro {
  font-size: 0.8em;
  font-weight: 300;
}

.full-horiz {
  margin: 40px 0;
  overflow: hidden;
}

.blurb {
  width: 40px;
  height: auto;
  margin-left: -60px;
  margin-top: -90px;
}

.tri-right img {
  float: right;
  height: 800px;
  margin-right: -80px;
}

span.horiz-left {
  display: block;
  margin-top: 4em;
}

.horiz-left {
  margin: 4em 0 4em -80px;
}

.horiz-right {
  margin: 4em -230px 4em 0;
  align-content: end;
}
.horiz-right svg {
  max-width: 80%;
}

.platform-img-box {
  border-radius: 20px;
  background: #fff;
  padding: 60px 0 60px 0;
}
.platform-img-box img {
  display: block;
  max-width: 50%;
  margin: auto;
}

.top-horiz {
  display: grid;
  grid-template-columns: 1fr 2fr;
  margin: 60px 0 40px 100px;
}
.top-horiz svg {
  max-width: 700px;
  justify-self: right;
}
.top-horiz h2 {
  margin-bottom: 0;
}

.mid-horiz {
  margin-top: 60px;
  display: grid;
  grid-template-columns: 1fr;
}
.mid-horiz svg {
  max-width: 900px;
}

/* Documents */
.docs-cards {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  grid-gap: 4em;
}
.docs-cards li {
  background-color: rgba(255, 255, 255, 0.8);
  padding: 1.5em;
  line-height: 1.4em;
  font-size: 1em;
  font-weight: 200;
  box-shadow: 0px 3px 13px 1px rgba(0, 0, 0, 0.12);
}
.docs-cards li span {
  font-weight: 200 !important;
}
.docs-cards li:hover {
  transition: 0.3s all ease-in-out;
  bottom: 0;
}
.docs-cards h1, .docs-cards h2, .docs-cards h3 {
  font-size: 1.5em;
  line-height: 1.2em;
}
.docs-cards a.btn-read-more {
  background: #000;
  color: #fff;
  padding: 8px;
  font-weight: 400;
}
.docs-cards a.btn-read-more:hover {
  color: #FFB500;
}
.docs-cards .btn-read-more img {
  margin-bottom: -2px;
  width: 14px;
}

.single-docs a {
  color: #034747;
}
.single-docs a:hover {
  color: #1BBA8A;
}
.single-docs article {
  background-color: rgba(255, 255, 255, 0.9);
  padding: 60px;
}

.docs-aside {
  line-height: 1.4em;
  margin-right: 40px;
}
.docs-aside h5 {
  margin: 1em 0 0 0;
}

/* //Documents */
/* COLOR STYLES BY PAGE */
body.home nav a {
  color: #BD84CC;
}
body.home nav a:hover {
  color: #1BBA8A;
}
body.home h1 {
  font-size: 6.5em;
  /* 40px */
  font-weight: 600;
  line-height: 1em;
  /* 44px */
  margin-top: 0;
  margin-bottom: 0.5em;
}
body.home h2 {
  font-size: 5.4em;
}
body.home h3 {
  font-size: 3em;
  line-height: 1.4em;
}
body.home h4 {
  font-size: 2em;
}
body.home .cta {
  text-align: center;
}
body.home section {
  grid-template-columns: repeat(2, 1fr);
}
body.home section:nth-child(1),
body.home nav {
  background-color: #034747;
  color: #BD84CC;
}
body.home section:nth-child(1) {
  background-image: url("images/bkg_table_lav.png");
  background-repeat: no-repeat;
  background-size: 40%;
  background-position: bottom right;
}
body.home section:nth-child(3) {
  background-color: #75223D;
  color: #fff;
  background-image: url("images/bkg_table_wht.png");
  background-repeat: no-repeat;
  background-size: 30%;
  background-position: bottom right;
}
body.home section:nth-child(3) button, body.home section:nth-child(3) .button {
  margin-bottom: 3em;
}
/* ... */

